--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-25 13:18+0000\n"
+"POT-Creation-Date: 2023-11-28 08:49+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -31,10 +31,12 @@ msgid "Important dates"
 msgstr ""
 
 #: accounts/forms.py:43 accounts/templates/accounts/account_update.html:43
+#: accounts/templates/accounts/register.html:60
 msgid "First Name"
 msgstr "Prénom"
 
 #: accounts/forms.py:44 accounts/templates/accounts/account_update.html:47
+#: accounts/templates/accounts/register.html:71
 msgid "Last Name"
 msgstr "Nom"
 
@@ -150,20 +152,62 @@ msgid "Clear"
 msgstr "Effacer"
 
 #: accounts/templates/accounts/login.html:11
-msgid "Get started today!"
-msgstr "C'est parti !"
+msgid "Welcome (back)!"
+msgstr "C'est (re)parti !"
 
-#: accounts/templates/accounts/login.html:71
+#: accounts/templates/accounts/login.html:14
+#: accounts/templates/accounts/register.html:32
+#: accounts/templates/accounts/register.html:49
+msgid ""
+"This website has been designed for families as a place to share and exchange "
+"your memories and forgotten photos. Involve your family and friends to "
+"collectively restore color and presence to your shared memories"
+msgstr ""
+"Ce site web a été pensé pour les familles comme un lieu de partage et "
+"d'échange de vos souvenirs et photos oubliées. Faites participer vos proches "
+"afin de redonner collectivement de la couleur et du présent à vos souvenirs "
+"communs"
+
+#: accounts/templates/accounts/login.html:73
 msgid "No account?"
 msgstr "Pas encore de compte ?"
 
-#: accounts/templates/accounts/login.html:72
+#: accounts/templates/accounts/login.html:74
 msgid "Sign up"
 msgstr "Inscrivez-vous"
 
-#: accounts/templates/accounts/login.html:75
+#: accounts/templates/accounts/login.html:77
 msgid "Sign in"
 msgstr "Valider"
+
+#: accounts/templates/accounts/register.html:28
+#: accounts/templates/accounts/register.html:45
+msgid "Welcome to Æternam"
+msgstr "Bienvenue sur Æternam"
+
+#: accounts/templates/accounts/register.html:79
+msgid "Email"
+msgstr "Courriel"
+
+#: accounts/templates/accounts/register.html:90
+msgid "Password"
+msgstr "Mot de passe"
+
+#: accounts/templates/accounts/register.html:101
+msgid "Password Confirmation"
+msgstr "Confirmez le mot de passe"
+
+#: accounts/templates/accounts/register.html:126
+msgid "Create an account"
+msgstr "Créer un compte"
+
+#: accounts/templates/accounts/register.html:130
+msgid "Already have an account?"
+msgstr "Déjà un compte ?"
+
+#: accounts/templates/accounts/register.html:131
+msgid "Log in"
+msgstr "Se connecter"
 
 #: accounts/templates/partials/account_connection_buttons.html:8
 msgid "Connected"
@@ -442,9 +486,12 @@ msgstr "je choisis"
 msgid "Album was deleted successfully"
 msgstr "L'album a été supprimé avec succès"
 
+#: core/forms.py:8
+msgid "Give a feedback and/or ideas.."
+msgstr "Donner votre avis et/ou des idées.."
+
 #: core/templates/core/about.html:5 core/templates/core/about.html:12
 #: core/templates/core/base.html:41
-#| msgid "About me"
 msgid "About"
 msgstr "À propos"
 
@@ -466,23 +513,56 @@ msgid ""
 "        "
 msgstr ""
 
-#: core/templates/core/about.html:25
+#: core/templates/core/about.html:30
 msgid "Upcoming"
 msgstr "Prochainement"
 
-#: core/templates/core/about.html:29
-#| msgid "Send a comment.."
+#: core/templates/core/about.html:42
 msgid "Edit comments"
 msgstr "Editer les commentaires"
 
-#: core/templates/core/about.html:30
+#: core/templates/core/about.html:51
 msgid "Tagging photos"
 msgstr "Photos: système de tags"
 
-#: core/templates/core/about.html:31
-#| msgid "Add photos"
+#: core/templates/core/about.html:59
 msgid "Crop photos"
 msgstr "Recadrer les photos"
+
+#: core/templates/core/about.html:72
+msgid "Feedback & ideas"
+msgstr "Retours et avis"
+
+#: core/templates/core/about.html:79
+msgid ""
+"Give a feedback about the website, its functionalities and what you wish to "
+"see improved:"
+msgstr ""
+"Donnez un avis à propos du site, ses fonctionnalités et ce que vous aimeriez "
+"voir amélioré:"
+
+#: core/templates/core/about.html:87
+msgid "Send"
+msgstr "Envoyer"
+
+#: core/templates/core/about.html:93
+#| msgid "Connected accounts"
+msgid "Connect to your account "
+msgstr "Connectez-vous"
+
+#: core/templates/core/about.html:94
+#| msgid ""
+#| "Connect to your account in order to give your feedback ! If you don't "
+#| "have an account, follow this "
+msgid ""
+"in order to give your feedback ! If you don't have an account, follow this "
+msgstr ""
+"pour faire un retour et/ou donner votre avis ! Si vous n'avez pas de "
+"compte, suivez ce "
+
+#: core/templates/core/about.html:94
+msgid "link"
+msgstr "lien"
 
 #: core/templates/core/base.html:42
 msgid "Contact"
@@ -558,28 +638,28 @@ msgstr "Confirmer la suppression"
 msgid "%(timing)s ago "
 msgstr "il y a %(timing)s"
 
-#: core/views.py:64
+#: core/views.py:93
 #, python-brace-format
 msgid ""
 "You gave {username} access to {add} and revoked their access to {revoke}"
 msgstr "Vous avez donné à {username} {add} accès et révoqué {revoke} accès"
 
-#: core/views.py:75
+#: core/views.py:104
 #, python-brace-format
 msgid "You gave {username} access to {number} photos"
 msgstr "Vous avez donné à {username} accès à {number} photos"
 
-#: core/views.py:81
+#: core/views.py:110
 #, python-brace-format
 msgid "You revoked {username} their access to {number} photos"
 msgstr "Vous avez révoqué l'accès de {username} à {number} photos"
 
 #
-#: core/views.py:93
+#: core/views.py:122
 msgid "{} won't have access to your album anymore"
 msgstr "{} n'aura plus accès à votre album"
 
-#: core/views.py:102
+#: core/views.py:131
 #, python-brace-format
 msgid "{username} can now access your album ({number} photos)"
 msgstr "{username} a maintenant accès à votre album ({number} photos)"
