--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-07 11:53+0000\n"
+"POT-Creation-Date: 2023-12-09 19:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -30,23 +30,27 @@ msgstr ""
 msgid "Important dates"
 msgstr ""
 
-#: accounts/forms.py:43 accounts/templates/accounts/account_update.html:43
+#: accounts/forms.py:38 accounts/templates/accounts/account_update.html:43
 #: accounts/templates/accounts/register.html:60
 msgid "First Name"
 msgstr "Prénom"
 
-#: accounts/forms.py:44 accounts/templates/accounts/account_update.html:47
+#: accounts/forms.py:39 accounts/templates/accounts/account_update.html:47
 #: accounts/templates/accounts/register.html:71
 msgid "Last Name"
 msgstr "Nom"
 
-#: accounts/forms.py:45
+#: accounts/forms.py:40
 msgid "Email Adress"
 msgstr "adresse mail"
 
-#: accounts/forms.py:69 accounts/models.py:103 accounts/models.py:136
+#: accounts/forms.py:64 accounts/models.py:103 accounts/models.py:136
 msgid "UNDEFINED"
 msgstr "NON DEFINI"
+
+#: accounts/models.py:23
+msgid "The given email must be set"
+msgstr "Un email doit être procuré"
 
 #: accounts/models.py:53
 msgid "email address"
@@ -87,6 +91,14 @@ msgstr "BEAU-FRERE/BELLE-SOEUR"
 #: accounts/models.py:110
 msgid "FRIEND"
 msgstr "AMI(E)"
+
+#: accounts/models.py:147
+msgid ""
+"{self.user_sending.first_name or self.user_sending} sent you a connection "
+"request."
+msgstr ""
+"{self.user_sending.first_name or self.user_sending} vous a envoyé une "
+"demande de connexion."
 
 #: accounts/templates/accounts/account.html:62
 #: photos/templates/photos/photo_detail.html:97
@@ -168,15 +180,29 @@ msgstr ""
 "afin de redonner collectivement de la couleur et du présent à vos souvenirs "
 "communs"
 
-#: accounts/templates/accounts/login.html:73
+#: accounts/templates/accounts/login.html:55
+msgid ""
+"\n"
+"          <input type=\"password\" name=\"password\" class=\"mt-1 w-full "
+"input input-bordered shadow-sm\" id=\"pw\" placeholder=\"Password\" "
+"required=\"\">\n"
+"          "
+msgstr ""
+"\n"
+"          <input type=\"password\" name=\"password\" class=\"mt-1 w-full "
+"input input-bordered shadow-sm\" id=\"pw\" placeholder=\"Mot de passe\" "
+"required=\"\">\n"
+"          "
+
+#: accounts/templates/accounts/login.html:74
 msgid "No account?"
 msgstr "Pas encore de compte ?"
 
-#: accounts/templates/accounts/login.html:74
+#: accounts/templates/accounts/login.html:75
 msgid "Sign up"
 msgstr "Inscrivez-vous"
 
-#: accounts/templates/accounts/login.html:77
+#: accounts/templates/accounts/login.html:78
 msgid "Sign in"
 msgstr "Valider"
 
@@ -267,6 +293,18 @@ msgstr "Commentaires"
 #: accounts/templates/partials/searchbar_results.html:35
 msgid "No results"
 msgstr "Pas de résultats"
+
+#: accounts/views.py:64
+msgid "Incorrect password. Please try again."
+msgstr "Mot de passe incorrect. Veuillez réessayer."
+
+#: accounts/views.py:67
+msgid "Authentication failed. Please try again."
+msgstr "L'authentification a échoué. Veuillez réessayer."
+
+#: accounts/views.py:70
+msgid "User with this email does not exist."
+msgstr "Aucun utilisateur n'existe pour cet identifiant."
 
 #: aeternam/settings.py:166
 msgid "French"
@@ -432,32 +470,31 @@ msgid "Albums you created"
 msgstr "Vos albums crées"
 
 #: albums/templates/albums/albums.html:67
-#: albums/templates/albums/albums.html:159
+#: albums/templates/albums/albums.html:160
 msgid "Empty album"
 msgstr "Album vide"
 
 #: albums/templates/albums/albums.html:69
-#: albums/templates/albums/albums.html:161
+#: albums/templates/albums/albums.html:162
 msgid "No cover photo"
 msgstr "Pas d'image de couverture"
 
 #: albums/templates/albums/albums.html:74
-#: albums/templates/albums/albums.html:166
+#: albums/templates/albums/albums.html:167
 msgid "uploaded by"
 msgid_plural "uploaded by"
 msgstr[0] "uploadée par"
 msgstr[1] "uploadées par"
 
-#: albums/templates/albums/albums.html:103
+#: albums/templates/albums/albums.html:104
 msgid "No albums yet !"
 msgstr "Pas encore d'album !"
 
-#: albums/templates/albums/albums.html:107
-#| msgid "Create a new album"
+#: albums/templates/albums/albums.html:108
 msgid "create a new album"
 msgstr "Créez un nouvel album"
 
-#: albums/templates/albums/albums.html:128
+#: albums/templates/albums/albums.html:129
 msgid "Albums shared with you"
 msgstr "Albums partagés avec vous"
 
@@ -2000,10 +2037,3 @@ msgstr ""
 #, python-format
 #~ msgid "%(notification.created_at|timesince|up_to:',')s ago "
 #~ msgstr "il y a %(notification.created_at|timesince|up_to:',')s"
-
-#~ msgid ""
-#~ "{self.user_sending.first_name or self.user_sending} sent you a connection "
-#~ "request."
-#~ msgstr ""
-#~ "{self.user_sending.first_name or self.user_sending} vous a envoyé une "
-#~ "demande de connexion."
